fixed chrome buttons alignment issue

--- a/src/pages/Trading/style.scss
+++ b/src/pages/Trading/style.scss
@@ -54,7 +54,7 @@
 .hfui-tradingpage__menu {
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
   margin: -15px 0 5px 0;
 }
